--- a/demo1/include/bottom.html
+++ b/demo1/include/bottom.html
@@ -69,7 +69,7 @@
           </div>
       </div>
 
-      <div class="copyright"><span><a href="#">法律声明</a><em>|</em><a href="#">联系我们</a></span>COPYRIGHT &copy; 2015 广州南粤财富管理有限公司版权所有   技术支持 : 鸣联科技</div>
+      <div class="copyright"><span><a href="#">法律声明</a><em>|</em><a href="#">联系我们</a></span>COPYRIGHT &copy; 2016 广州南粤财富管理有限公司版权所有</div>
 
 </footer>
 
@@ -82,5 +82,5 @@
     });
 
     //整站无图处理
-    jQuery.each(jQuery("img"), function (i, n) { jQuery(n).error(function () { n.src = 'uploadfiles/nopic.jpg'; }); n.src = n.src; });
+    jQuery.each(jQuery("img"), function (i, n) { jQuery(n).error(function () { n.src = 'images/nopic.jpg'; }); n.src = n.src; });
 </script>
