--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -25,10 +25,7 @@ a:hover{ color:#a71f24; text-decoration:underline;}
 .Pages a{ background:#fff; border:1px solid #dbdbdb; display:inline-block; padding:0 6px; height:24px; line-height:24px; margin-right:3px; color:#b3b3b3;}
 .Pages a:hover{ background:#dbdbdb; border:1px solid #dbdbdb; color:#5e5e5e; text-decoration:none;}
 .Pages em{ font-style:normal;}
-/*.Pages em a{ font-style:normal; border:none; color:#666; padding:0 6px;}*/
-/*.Pages em a:hover{ background:none; border:none; color:#666;}*/
 .Pages em a.a_cur{ font-weight:bold; color:#5e5e5e; border-bottom:1px solid #dbdbdb;}
-
 .Pages .p_count,.Pages .p_total,.Pages .p_cur,.Pages .p_jump{ display:none;}
 
 
@@ -80,8 +77,8 @@ a:hover{ color:#a71f24; text-decoration:underline;}
 .Homeban .bd li{ vertical-align:middle; zoom:1; width:100%; height:548px; display:block;}
 .Homeban .bd img{ width:100%; height:548px; display:block;}
 
-.Homeban .prev{ position:absolute; left:10%; top:50%; margin-top:-29px; display:block; width:33px; height:58px; background:url(../images/arrow_left.png) no-repeat; filter:alpha(opacity=50);opacity:0.5;}
-.Homeban .next{ position:absolute; right:10%; top:50%; margin-top:-29px; display:block; width:33px; height:58px; background:url(../images/arrow_right.png) no-repeat; filter:alpha(opacity=50);opacity:0.5;}
+.Homeban .prev{ position:absolute; left:10%; top:50%; margin-top:-29px; display:block; width:33px; height:58px; background:url(../images/arrow_left.png) no-repeat; filter:alpha(opacity:50);opacity:0.5;}
+.Homeban .next{ position:absolute; right:10%; top:50%; margin-top:-29px; display:block; width:33px; height:58px; background:url(../images/arrow_right.png) no-repeat; filter:alpha(opacity:50);opacity:0.5;}
 .Homeban .prev:hover,
 .Homeban .next:hover{ filter:alpha(opacity=100);opacity:1;}
 
@@ -94,7 +91,7 @@ a:hover{ color:#a71f24; text-decoration:underline;}
 .Home_total{ width:1160px; height:175px; margin:0 auto; position:relative; z-index:1;}
 .Home_total_hot{ float:left; width:147px; height:145px; background:url(../images/home_listbg.jpg) no-repeat; padding:20px 0 0 20px; font-size:16px; color:#fff;line-height:26px;}
 .Home_total_hot span{ display:block;}
-.Home_total_hot p{ margin:0; font-family:"Arial";  filter:alpha(opacity=50);opacity:0.5;}
+.Home_total_hot p{ margin:0; font-family:"Arial";  filter:alpha(opacity:50);opacity:0.5;}
 
 
 .Home_hot_txtScroll-left{ float:left; width:170px; height:155px; background:#fff; padding:20px 25px 0;}
@@ -420,7 +417,7 @@ a:hover{ color:#a71f24; text-decoration:underline;}
 .button {display: inline-block;zoom: 1; *display: inline;vertical-align: baseline;margin: 0 2px;outline: none;cursor: pointer;text-align: center;text-decoration: none;font: 14px/100% Arial, Helvetica, sans-serif;padding:0.25em 0.6em 0.3em;text-shadow: 0 1px 1px rgba(0,0,0,.3);-webkit-border-radius: .5em; -moz-border-radius: .5em;border-radius: .5em;-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);box-shadow: 0 1px 2px rgba(0,0,0,.2);
     }
 
-.red {color: #faddde;border: solid 1px #980c10;background: #d81b21;background: -webkit-gradient(linear, left top, left bottom, from(#ed1c24), to(#A51715));background: -moz-linear-gradient(top,  #ed1c24,  #A51715);filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ed1c24', endColorstr='#aa1317');
+.red {color: #faddde;border: solid 1px #980c10;background: #d81b21;background: -webkit-gradient(linear, left top, left bottom, from(#ed1c24), to(#A51715));background: -moz-linear-gradient(top,  #ed1c24,  #A51715); filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ed1c24', endColorstr='#aa1317');
     }
 .red:hover { background: #b61318; background: -webkit-gradient(linear, left top, left bottom, from(#c9151b), to(#a11115)); background: -moz-linear-gradient(top,  #c9151b,  #a11115); filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#c9151b', endColorstr='#a11115'); color:#fff;}
 .red:active {color: #de898c;background: -webkit-gradient(linear, left top, left bottom, from(#aa1317), to(#ed1c24));background: -moz-linear-gradient(top,  #aa1317,  #ed1c24);filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#aa1317', endColorstr='#ed1c24');}
@@ -433,7 +430,6 @@ a:hover{ color:#a71f24; text-decoration:underline;}
 .keUrl{color:#FFF; font-size:30px;}
 .keUrl:hover{ text-decoration: underline; color: #FFF; }
 .mKeBanner,.mKeBanner div{text-align:center;}
-/*科e互联特效基本框架CSS结束，应用特效时，以上样式可删除*/
 /* 效果CSS开始 */
 
 
