--- a/juhuasuan/css/css.css
+++ b/juhuasuan/css/css.css
@@ -1,5 +1,5 @@
 body,ul,ol,dl,p{ margin:0; padding:0;}
-body{ font-family:Î¢ÈíÑÅºÚ; font-size:20px; color:#999;}
+body{ font-family:"Microsoft YaHei"; font-size:20px; color:#999;}
 ul,dl,ol{ list-style:none;}
 em{ font-style:normal;}
 a{ color:#999; text-decoration:none;}
