--- a/juhuasuan/css/style.css
+++ b/juhuasuan/css/style.css
@@ -7,9 +7,9 @@ header img{ width:9.4rem; height:2.2rem; margin-top:0.175rem;}
 .banner .bd li{ float:left; width:16rem; height:6.675rem;}
 .banner .bd li img{ width:100%;}
 
-.banner .hd{ position:absolute; left:50%; bottom:0; height:0.25rem; margin-left:-2.5rem;}
-.banner .hd li{ float:left; width:0.25rem; height:0.25rem; background:#a9a9a9; margin:0 0.25rem; border-radius:50%;}
-.banner .hd li.active{ background:#ff4300;}
+.banner .hd{ position:absolute; left:50%; bottom:0; height:0.25rem; margin-left:-1.875rem;}
+.banner .hd li{ float:left; width:0.25rem; height:0.25rem; background:#a9a9a9; margin:0 0.25rem; border-radius:50%; font-size:0;}
+.banner .hd li.on{ background:#ff4300;}
 
 .nav_list{ padding-top:0.5rem;}
 .nav_list ul{ overflow:hidden;}
