--- a/jzhangbao/css/b.css
+++ b/jzhangbao/css/b.css
@@ -995,7 +995,7 @@
 	text-align:right;
 	padding-right: 25px;
 	border: none;
-	background: url(../images/weixin.png) no-repeat #3fbff0;	
+	background: url(../images/wechat.png) no-repeat #3fbff0;	
 	background-position: 34px center;
 	position: absolute;
 	border-radius: 0 3px 3px 0;
