--- a/jzhangbao/include/bottom.html
+++ b/jzhangbao/include/bottom.html
@@ -1,47 +1,18 @@
-<footer class="Bottom">
-    <div class="auto">
-        <dl>
-            <dt>走进华宗</dt>
-            <dd><a href="#">公司简介</a></dd>
-            <dd><a href="#">企业愿景</a></dd>
-            <dd><a href="#">服务理念</a></dd>
-            <dd><a href="#">品质理念</a></dd>
-            <dd><a href="#">经营理念</a></dd>
-            <dd><a href="#">企业精神</a></dd>
-        </dl>
-
-        <dl>
-            <dt>华宗产品</dt>
-            <dd><a href="#">配件</a></dd>
-            <dd><a href="#">控制器</a></dd>
-            <dd><a href="#">点胶机</a></dd>
-            <dd><a href="#">在线式自动点胶机</a></dd>
-            <dd><a href="#">螺丝机设备</a></dd>
-            <dd><a href="#">电池自动点焊机</a></dd>
-            <dd><a href="#">点胶阀/压力桶/高压泵</a></dd>
-        </dl>
-        <dl>
-            <dt>新闻动态</dt>
-            <dd><a href="#">行业新闻</a></dd>
-            <dd><a href="#">企业新闻</a></dd>
-        </dl>
-        <div class="copyright">
-            <div class="title">深圳市华宗科技有限公司</div>
-            <p>
-                地址：深圳龙华新区大浪街道同富裕工业园21栋2楼<br />
-                电话：0755-86351620       13713535279（徐先生）<br />
-                传真：0755-32907339<br />
-                邮箱： 553815811@qq.com<br />
-            </p>
-
-        </div>
-
-        <div class="clear"></div>
-    </div>
+<footer class="footer">
+    <div class="w1200"><img src="images/06.png" /></div>
+    <p>深圳计账宝有限公司版权所有&copy 2019</p>
 </footer>
 
 <script type="text/javascript">
-
     //整站无图处理
-    //jQuery.each(jQuery("img"), function (i, n) { jQuery(n).error(function () { n.src = 'uploadfiles/nopic.jpg'; }); n.src = n.src; });
+    jQuery.each(jQuery("img"), function (i, n) { jQuery(n).error(function () { n.src = 'uploadfiles/nopic.jpg'; }); n.src = n.src; });
+    (function () {
+        var _53code = document.createElement("script");
+        _53code.src = '//tb.53kf.com/code/code/59ce5a4e5a77cf48a142468863d5a656/1';
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(_53code, s);
+    })();
+    function openChat() {
+        window.open("https://tb.53kf.com/code/client/59ce5a4e5a77cf48a142468863d5a656/1","_blank",'width=800,height=590,resizable=no,left=200,top=50');
+    }
 </script>
