--- a/jzhangbao/include/head.html
+++ b/jzhangbao/include/head.html
@@ -1,8 +1,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="Author" content="">
-<meta content="深圳思方展览 www.sifangzl.com" name="design">
-<title>深圳华宗</title>
-<link rel="stylesheet" type="text/css" href="css/style.css"/>
+<meta content="计账宝 www.jzhangbao.com" name="design">
+<title>计账宝</title>
+<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="css/main.css" />
 <script type="text/javascript" src="scripts/jquery-1.4.2.min.js"></script>
 <!--[if lt IE 9]>
   <script type="text/javascript" src="scripts/html5shiv.v3.72.min.js"></script>
