--- a/jzhangbao/include/top.html
+++ b/jzhangbao/include/top.html
@@ -1,69 +1,25 @@
 <header class="Toper">
-<div class="Top">
-   <a class="logo" href="index.shtml"></a>
-   <span class="tel">服务热线：<b>187-0201-5004</b></span>
-   <nav class="MainNav">
-      <ul>
-         <li><a id="nav1" href="index.shtml">首页</a></li>
-         <li><a id="nav2" href="about.shtml">走进华宗</a></li>
-         <li><a id="nav3" href="cancellation.shtml">华宗产品</a>
-             <div class="subnav">
-                 <ul>
-                     <li><a href="#">配件</a></li>
-                     <li><a href="#">控制器</a></li>
-                     <li><a href="#">点胶机</a></li>
-                     <li><a href="#">在线式自动点胶机</a></li>
-                     <li><a href="#">螺丝机设备</a></li>
-                     <li><a href="#">电池自动点焊机</a></li>
-                     <li><a href="#">点胶阀/压力桶/高压泵</a></li>
-                 </ul>
-             </div>
-         </li>
-
-         <li><a id="nav4" href="cancellation.shtml">产品性能</a></li>
-          <li><a id="nav5" href="news.shtml">新闻动态</a>
-              <div class="subnav">
-                  <ul>
-                      <li><a href="#">行业新闻</a></li>
-                      <li><a href="#">企业新闻</a></li>
-                  </ul>
-              </div>
-          </li>
-          <li><a id="nav6" href="message.shtml">客户留言</a></li>
-          <li><a id="nav7" href="contact.shtml">联系我们</a></li>
-      </ul>
-      <div class="clear"></div>
-   </nav>
-</div>
+    <div class="Top">
+        <a class="logo" href="index.shtml"></a>
+        <span class="tel">服务热线：<b>0755-28892997</b></span>
+        <nav class="MainNav">
+            <ul>
+                <li><a id="nav1" href="index.shtml">公司注册</a></li>
+                <li><a id="nav2" href="agent.shtml">代理记账</a></li>
+                <li><a id="nav3" href="cancellation.shtml">公司注销</a></li>
+                <li><a id="nav4" href="change.shtml">工商变更</a></li>
+                <li><a id="nav5" href="rademark.shtml">商标注册</a></li>
+                <li><a id="nav6" href="patent.shtml">专利申请</a></li>
+                <li><a id="nav7" href="licence.shtml">许可证</a></li>
+                <li><a id="nav8" href="HK.shtml">香港公司注册</a></li>
+                <li><a id="nav9" href="subsidy.shtml">创业补贴</a></li>
+                <li><a id="nav10" href="about.shtml">关于我们</a></li>
+            </ul>
+            <div class="clear"></div>
+        </nav>
+    </div>
 </header>
 <script type="text/javascript">
-   //导航选中
-   $("#nav" + navID).addClass("onnav");
-   $(".Search").hover(
-       function() {
-           $(this).addClass('SearchOn');
-       },
-       function(){
-           var _this=this;
-           setTimeout(function(){
-               $(_this).removeClass('SearchOn');
-           },500)
-
-       }
-   );
-
-   //下拉产品导航
-   $(".MainNav li").mouseover(function(){
-       $(".MainNav li a").attr("class","");
-       $(this).find("a").attr("class","onnav");
-       $(this).find(".subnav").stop(true,true).slideDown(500);
-
-   });
-
-   $(".MainNav li").mouseleave(function(){
-       $(".MainNav li a").attr("class","");
-       $("#nav" + navID).addClass("onnav");
-       $(this).find(".subnav").stop(true,true).slideUp(500);
-   });
+//导航选中
+$("#nav" + navID).addClass("onnav");
 </script>
-
