新增华宗网站

--- a/jzhangbao/css/main.css
+++ b/jzhangbao/css/main.css
@@ -2157,7 +2157,7 @@ img{cursor: pointer; margin: auto; display: block;}
 	*display: inline;
 }
 .go-jion i {
-background: url(../images/gszc/wechat.png) no-repeat;
+background: url(../images/wechat.png) no-repeat;
 width: 26px;
 height: 26px;
 vertical-align: middle;
