--- a/jzhangbao/css/style.css
+++ b/jzhangbao/css/style.css
@@ -446,7 +446,7 @@ table{border-collapse:collapse;border-spacing:0;}
     background: linear-gradient(to right, #550ef9, #7523dc);
     /* 标准的语法 */
 }
-.vs-text{
+.vs-text02{
 	width: 1200px;
 	overflow:auto;
     margin:auto; 
